--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-modal": "^2.5.0",
     "react-native-star-rating": "^1.0.8",
     "react-native-vector-icons": "^4.3.0",
     "react-redux": "^5.0.6",
