--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-native-modal": "^2.5.0",
     "react-native-star-rating": "^1.0.8",
     "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-form": "^7.0.3",
+    "redux-form": "^5.3.2",
+    "redux-persist": "^4.8.3",
+    "redux-thunk": "^2.2.0",
     "spotify": "^0.3.0"
   },
   "devDependencies": {
